--- a/addContact.html
+++ b/addContact.html
@@ -43,7 +43,7 @@
 
 <body>
 
-    <div id="overlay-add-contact" class="overlay-add-contact">
+    <div id="overlay-add-contact" class="overlay-add-contact d-none">
         <div class="close-div">
             <img src="assed/svg/contact-imgs/close.svg" alt="" class="close-img">
         </div>
@@ -58,7 +58,7 @@
                 <img src="assed/svg/contact-imgs/close.svg" alt="" class="cancel-btn-img">
             </button>
 
-            <button onclick="addContact()" class="create-contact-btn">
+            <button onclick="addContact(), closeAddContactOverlay()" class="create-contact-btn">
                 <div class="create-contact-txt">Create contact</div>
                 <div class="create-contact-bounding-box-img">
                     <img src="assed/svg/contact-imgs/check.svg" alt="" class="create-contact-img">
