--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
     <!-- customize Scripts -->
     <script src="script.js"></script>
     <script src="/js/addContact.js"></script>
+    <script src="/js/storage.js"></script>
     <!-- Favivon -->
 
     <link rel="shortcut icon" href="/assed/svg/join_logo.svg" type="image/svg+xml">
@@ -53,7 +54,7 @@
     <div w3-include-html="assed/template/sidebar.html"></div>
     <div w3-include-html="assed/template/contact_site.html"></div>
     <!-- <div id="allContact" w3-include-html="assed/template/contact_site.html"></div> -->
-    <div w3-include-html="assed/template/add_new_contact.html"></div>
+    <!-- <div w3-include-html="assed/template/add_new_contact.html"></div> -->
     <div w3-include-html="addContact.html"></div>
 
 
